[gd_scene load_steps=63 format=2]

[ext_resource path="res://Player/Arrow/Arrow.gd" type="Script" id=1]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/0.png" type="Texture" id=2]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/1.png" type="Texture" id=3]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/2.png" type="Texture" id=4]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/3.png" type="Texture" id=5]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/4.png" type="Texture" id=6]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/5.png" type="Texture" id=7]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/6.png" type="Texture" id=8]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/7.png" type="Texture" id=9]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/8.png" type="Texture" id=10]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/9.png" type="Texture" id=11]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/10.png" type="Texture" id=12]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/11.png" type="Texture" id=13]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/12.png" type="Texture" id=14]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/13.png" type="Texture" id=15]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/14.png" type="Texture" id=16]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/15.png" type="Texture" id=17]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/16.png" type="Texture" id=18]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/17.png" type="Texture" id=19]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/18.png" type="Texture" id=20]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/19.png" type="Texture" id=21]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/20.png" type="Texture" id=22]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/21.png" type="Texture" id=23]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/22.png" type="Texture" id=24]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/23.png" type="Texture" id=25]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/24.png" type="Texture" id=26]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/25.png" type="Texture" id=27]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/26.png" type="Texture" id=28]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/27.png" type="Texture" id=29]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/28.png" type="Texture" id=30]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/29.png" type="Texture" id=31]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/30.png" type="Texture" id=32]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/31.png" type="Texture" id=33]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/32.png" type="Texture" id=34]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/33.png" type="Texture" id=35]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/34.png" type="Texture" id=36]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/35.png" type="Texture" id=37]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/36.png" type="Texture" id=38]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/37.png" type="Texture" id=39]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/38.png" type="Texture" id=40]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/39.png" type="Texture" id=41]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/40.png" type="Texture" id=42]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/41.png" type="Texture" id=43]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/42.png" type="Texture" id=44]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/43.png" type="Texture" id=45]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/44.png" type="Texture" id=46]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/45.png" type="Texture" id=47]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/46.png" type="Texture" id=48]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/47.png" type="Texture" id=49]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/48.png" type="Texture" id=50]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/49.png" type="Texture" id=51]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/50.png" type="Texture" id=52]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/51.png" type="Texture" id=53]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/52.png" type="Texture" id=54]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/53.png" type="Texture" id=55]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/54.png" type="Texture" id=56]
[ext_resource path="res://Material/Special_Effects/Searing_Arrow/55.png" type="Texture" id=57]
[ext_resource path="res://Sound/Effect/Arrow/Target_01.wav" type="AudioStream" id=58]
[ext_resource path="res://Sound/Effect/Arrow/Target_02.wav" type="AudioStream" id=59]
[ext_resource path="res://Sound/Effect/Arrow/Target_03.wav" type="AudioStream" id=60]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ) ],
"loop": true,
"name": "Flying",
"speed": 60.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 3.19661
height = 24.6963

[node name="Arrow" type="Area2D"]
scale = Vector2( 1.5, 1.5 )
collision_layer = 8
collision_mask = 6
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
rotation = -1.5708
frames = SubResource( 1 )
animation = "Flying"
frame = 29

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
rotation = -1.5708
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
scale = Vector2( 1.25, 0.25 )

[node name="After_Image_Timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="Sound" type="Node" parent="."]

[node name="Target_01" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 58 )

[node name="Target_02" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 59 )

[node name="Target_03" type="AudioStreamPlayer" parent="Sound"]
stream = ExtResource( 60 )

[connection signal="body_entered" from="." to="." method="_on_Arrow_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
